--- a/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
+++ b/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
@@ -75,6 +75,10 @@
     <Compile Include="Classes\AssessmentRow.cs" />
     <Compile Include="Classes\BannerCourseRecord.cs" />
     <Compile Include="Classes\BannerStudentRecord.cs" />
+    <Compile Include="Classes\Catalog.cs" />
+    <Compile Include="Classes\CatalogEntry.cs" />
+    <Compile Include="Classes\CourseCatalog.cs" />
+    <Compile Include="Classes\CourseCatalogEntry.cs" />
     <Compile Include="Classes\ScalePoint.cs" />
     <Compile Include="Forms\frmCatalog.cs">
       <SubType>Form</SubType>
