End of Day 3/22
Workbook is complete, including completions report.

Need to finish catalog management.

--- a/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
+++ b/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
@@ -22,7 +22,10 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>2</ApplicationRevision>
+    <TargetCulture>en</TargetCulture>
+    <ProductName>General Assessment Analyzer</ProductName>
+    <PublisherName>Concordia University Chicago</PublisherName>
+    <ApplicationRevision>6</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -163,9 +166,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\CatalogFormatted.xml">
+    <Content Include="Resources\CatalogFormatted.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
