COE Report Draft 1
Fall COE Report Sent to Dr. Stricker.

--- a/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
+++ b/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Classes\BannerStudentRecord.cs" />
     <Compile Include="Classes\Catalog.cs" />
     <Compile Include="Classes\CatalogEntry.cs" />
+    <Compile Include="Classes\COEStudentRecord.cs" />
     <Compile Include="Classes\CourseCatalog.cs" />
     <Compile Include="Classes\CourseCatalogEntry.cs" />
     <Compile Include="Classes\ScalePoint.cs" />
