Debuging Completions Report
See the title.  J found a bug in the assessment comp report that I'm working on.

--- a/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
+++ b/General-Assessment-Analyzer/General-Assessment-Analyzer/General-Assessment-Analyzer.csproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Compile Include="Classes\AssessmentCourseRecord.cs" />
     <Compile Include="Classes\AssessmentRow.cs" />
+    <Compile Include="Classes\AssessmentRowWithPosition.cs" />
     <Compile Include="Classes\BannerCourseRecord.cs" />
     <Compile Include="Classes\BannerStudentRecord.cs" />
     <Compile Include="Classes\Catalog.cs" />
